variables/override-default-with-cli/terraform-manifests/security-groups.tf
# AWSS Security group
# Resource: Create Security Group - VPC SSH traffic
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "VPC default security group for ssh"

  ingress {
    description = "Allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IPs and Ports Outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Resource: Create Security Group - VPC Web traffic
resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "VPC default security group for web"

  ingress {
    description = "Allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IPs and Ports Outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
